# wiwipaccer

./: .gitignore  .npmrc  .pnpmfile.cjs  404.html  CHANGELOG.md  Cargo.toml  README.md  _payload.json  app.vue  base.nuxt.config.ts  bun.lockb  gen-versions.ts  index.html  nuxt.config.base.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tailwind.config.js  tailwind.config.ts  tsconfig.json
.cargo/: config.toml
.github/: Cargo.toml  release.ts
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  ci.yml  deploy-site.yml  mc-releases.yml  release.yml  test.yml  tmp-pnpm-store-path.yml
.oud/: .gitignore  app.vue  histoire.config.ts  pnpm-workspace.yaml
.oud/oud/: app.vue  pnpm-lock.yaml  rust-toolchain.toml
.oud/oud/docs/: app.vue
.oud/oud/docs/content/: another-page.md
.oud/oud/docs/pages/: [...slug].vue
.oud/oud/i18n/nuxt-module/: module.ts  package.json
.oud/oud/lib/: Cargo.toml
.oud/oud/lib/src/v1/: mod.rs
.oud/oud/lib/src/v1/runtime_meta/: action.rs  texture.rs  workspace.rs
.oud/oud/lib/src/v2/: mod.rs
.oud/oud/lib/src/v2/manifest/option/: file.rs
.oud/oud/lib/src/v2/manifest/texture/: mod.rs
.oud/oud/lib/src/v2/manifest/version/: file.rs  runtime.rs
.oud/oud/lib/src/v2/util/: mod.rs
.oud/oud/pages/: about.vue
.oud/oud/scripts/: release.ts
.oud/oud/site/pages/: index.vue
.oud/oud/site/public/: CNAME
.oud/oud/src-tauri/src/: db.rs  main.rs
.oud/src-tauri/: Cargo.toml
.oud/src-tauri/src/: main.rs  window.rs
_nuxt/: entry.30523c25.js  entry.665c13f0.js  entry.68362dcf.css  entry.79ddfacc.js  entry.8652f726.js  entry.a09bbcec.css  error-404.12373bd5.js  error-404.b751fa02.css  error-404.dd281d3a.js  error-404.e5b496ff.js  error-404.ffae530a.js  error-500.2f1691e2.js  error-500.49a8bb9c.js  error-500.69009e70.css  error-500.88f4c562.js  error-500.a5187946.js  error-component.134acebe.js  error-component.2fb82175.js  error-component.4286b6b5.js  error-component.84596c90.js  index.5c9a2af6.js  index.6cf4a121.js  index.7a09b38f.js  index.e450e895.js
app/: nuxt.config.ts  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs  window_manager.rs
components/: GithubMarkBlack.vue  SelectComponentThing.vue  TitleBarContainer.vue  WelcomeProjectHistory.vue  WiwiButton.vue
components/welcome/: WelcomeHeaderButton.vue  WelcomeProjectHistory.vue
components/workspace/: Build.vue
composables/: cmds.ts  project-meta.ts  project-store.ts  project.ts  theme.ts  uid.ts
docs/: app.vue  nuxt.config.ts  package.json  tailwind.config.js  tailwind.config.ts
i18n/: Cargo.toml
i18n/src/: lib.rs  resource_provider.rs  resources.rs
lib/: Cargo.toml
lib/core/: Cargo.toml
lib/core/src/: lib.rs
lib/model/: Cargo.toml
lib/model/src/structs/: meta.rs
lib/model/src/structs/meta/: datasource_v1.rs
lib/nom/: Cargo.toml
lib/nom/src/: lib.rs
lib/src/: datasource.rs  error.rs  lib.rs  meta.rs  nominal_typing_owo.rs  pack_formats.rs  pack_formats_src.txt  pack_sources.rs  ron.rs  runtime_meta.rs  settings.rs  texture.rs  util.rs  workspace.rs
lib/src/external_meta/: mod.rs  pack_formats.rs
lib/src/internal/: pack_formats.rs  pack_formats_src
lib/src/mc_structs/: blockstate.rs  model.rs
lib/src/meta/: datasource.rs  option.rs  pack_formats  pack_formats.rs  pack_formats_src  pack_version_specifier.rs  texture.rs  version.rs
lib/src/runtime_meta/: action.rs  datasource.rs  option.rs  pack_version_specifier.rs  texture.rs  version.rs  workspace.rs
lib/src/v1/: mc_structs.rs  mod.rs  runtime_meta.rs  util.rs
lib/src/v1/meta/: datasource.rs  pack_version_specifier.rs
lib/src/v1/runtime_meta/: datasource.rs  option.rs  texture.rs  version.rs  workspace.rs
lib/src/v2/: mod.rs
lib/src/v2/manifest/: datasource.rs  mod.rs  option.rs  texture.rs  version.rs  workspace.rs
lib/src/v2/manifest/texture/: file.rs
lib/src/v2/manifest/version/: file.rs
lib/src/v2/manifest/workspace/: file.rs
lib/src/v2/util/: impl_deref.rs  mod.rs
lib/util/: Cargo.toml
oud/: .npmrc  nuxt.config.ts  pnpm-workspace.yaml
oud/components/: SelectComponentThing.vue  WelcomeProjectHistory.vue
oud/components/workspace/: Dev.vue
oud/composables/: project-meta.ts
oud/docs/: nuxt.config.ts  package.json
oud/docs/content/: index.md
oud/lib/src/: pack_formats.rs
oud/lib/src/v1/meta/: option.rs
oud/lib/src/v2/: error.rs
oud/lib/src/v2/generators/: mod.rs
oud/lib/src/v2/manifest/: mod.rs
oud/lib/src/v2/manifest/datasource/: file.rs
oud/lib/src/v2/util/: ron.rs
oud/pages/: project-folder.vue
oud/scripts/: gen-versions-v2.ts
oud/site/: app.vue  package.json
oud/src-tauri/src/: window_manager.rs
pages/: about.vue  project-folder.vue  project_folder.vue  settings.vue  welcome.vue
scripts/: deploy-site.ts  devservers.ts  fetch_manifest.ts  gen-versions-v2.ts  gen-versions.ts  lib.ts  release.ts  update-tauri-app-version-to-next.ts  update-tauri-version-to-next.ts
site/: nuxt.config.ts  package.json  tailwind.config.js  tailwind.config.ts
site/pages/: index.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/meta/: README
src-tauri/src/: cmds.rs  db.rs  main.rs  menu.rs  theme.rs  window_builder.rs  window_manager.rs
