[workspace]
resolver = "2"
members = [
	"packages/nominal",
	"packages/wiwipaccer-pack",
	"packages/wiwipaccer-texture",
	"packages/wiwipaccer-texture-option",
	"packages/wiwipaccer-util",
	"packages/wiwipaccer-workspace"
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies]
async-trait = "0.1.77"
camino = "1.1.6"
hashbrown = { version = "0.14.3", features = ["serde"] }
ron = "0.8.1"
semver = "1.0.21"
serde = { version = "1.0.194", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }

[profile.dev]
opt-level = 0 # none
debug-assertions = true
debug = true
incremental = true

[profile.release]
opt-level = 3 # all
debug-assertions = false
lto = true
codegen-units = 1
