[workspace]
resolver = "2"
members = [
	"packages/app/src-tauri",
	"packages/core",
	"packages/mc-versions-macro",
	"packages/nominal",
	"packages/ts-result"
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies]
async-trait = "0.1.77"
camino = "1.1.6"
hashbrown = { version = "0.14.3", features = ["serde"] }
ron = "0.8.1"
semver = { version = "1.0.21", features = ["serde"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }

[profile.dev]
opt-level = 0 # none
debug-assertions = true
debug = true
incremental = true

[profile.release]
opt-level = 3 # all
debug-assertions = false
lto = true
codegen-units = 1
