[package]
name = "wiwipaccer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait = "0.1.75"
camino = "1.1.6"
futures = "0.3.29"
hashbrown.workspace = true
ron = "0.8.1"
semver = "1.0.20"
serde.workspace = true
thiserror = "1.0.51"
tokio.workspace = true
