[package]
name = "wiwipaccer"
version = "0.0.0"
# description = ""
authors = ["Meadowsys"]
license = "AGPL-3.0-only"
repository = "https://github.com/Meadowsys/wiwipaccer"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
ahash = "0.8.3"
camino = "1.1.4"
lazy_static = "1.4.0"
lib = { path = "../lib" }
mimalloc = "0.1.37"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
surrealdb = "=1.0.0-beta.8"
tauri = { version = "1.3.0", features = ["dialog", "macos-private-api", "shell-open", "system-tray", "updater", "window-start-dragging"] }
tokio = { version = "1.28.0", features = ["full"] }
window-vibrancy = "0.3.2"
hex = "0.4.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
