[package]
name = "wiwipaccer"
version = "0.0.0"
# description = ""
authors = ["Meadowsys"]
license = "AGPL-3.0-only"
repository = "https://github.com/Meadowsys/wiwipaccer"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=2.0.0-alpha.8", features = [] }

[dependencies]
ahash = "0.8.3"
camino = "1.1.4"
hex = "0.4.3"
lazy_static = "1.4.0"
lib = { path = "../lib" }
mimalloc = "0.1.37"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
surrealdb = { version = "=1.0.0-beta.9", default-features = false, features = ["kv-rocksdb"] }
tauri = { version = "=2.0.0-alpha.11", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "=2.0.0-alpha.1"
tauri-plugin-window = "=2.0.0-alpha.1"
tokio = { version = "1.28.0", features = ["full"] }
window-vibrancy = "0.3.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
