[package]
name = "wiwipaccer"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.10", features = [] }

[dependencies]
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
tauri = { version = "2.0.0-alpha.16", features = [] }
tokio = { version = "1.33.0", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
