[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.13", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.0.0-alpha.20", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
