[package]
name = "wiwipaccer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# async-trait.workspace = true
# camino.workspace = true
# futures.workspace = true
# hashbrown.workspace = true
nominal = { path = "../nom", features = ["serde"] }
# ron.workspace = true
# semver.workspace = true
# serde.workspace = true
# serde_json.workspace = true
# thiserror.workspace = true
# tokio.workspace = true
